<resources>
    <string name="translators">TrianguloY</string>
    <string name="locale">English</string>
    <string name="txt_info">This app acts as an intermediary when opening clicked URL links. A dialog with some info about the link is shown when choosing this app to open it. Press the module button below to check and configure all available modules.</string>
    <string name="txt_sample">Press the link below to test it:</string>
    <string name="a_modules">Modules</string>
    <string name="a_settings">Settings</string>
    <string name="a_about">About</string>
    <string name="txt_about">"App created by TrianguloY.

Contributions: %1$s.
Translations: %2$s."</string>
    <string name="link_blog">"TrianguloY's blog"</string>
    <string name="link_changelog">Changelog</string>
    <string name="link_source">Source code</string>
    <string name="link_privacy">Privacy policy</string>
    <string name="txt_conf">Here are all the available modules, where you can check their description and settings. You can also reorder, toggle the title visibility and enable/disable them.</string>
    <string name="toast_cantEnable">"Can't enable the module: %s"</string>
    <string name="menu_resetOrder">Reset order</string>
    <string name="menu_toggleDecorations">Toggle all titles</string>
    <string name="desc_up">Move up</string>
    <string name="desc_down">Move down</string>
    <string name="desc_decorations">Show/hide title</string>
    <string name="desc_enable">Enable/disable module</string>
    <string name="txt_openLinks">Open links on this app: Over the years Android has changed the way to configure it, and differs between versions. Find below all available settings for your device, if links are not being opened on this app try them all.</string>
    <string name="btn_setBrowser">Set as default browser</string>
    <string name="toast_defaultSet">The app is now the default web browser</string>
    <string name="btn_configureBrowser">Default web browser</string>
    <string name="btn_linksSettings">Open supported links</string>
    <string name="btn_androidSettings">Android app settings</string>
    <string name="txt_theme">Theme:</string>
    <string name="spin_darkTheme">Dark</string>
    <string name="spin_lightTheme">Light</string>
    <string name="txt_locale">Locale:</string>
    <string name="txt_animation">Enable animations</string>
    <string name="btn_tutorialSettings">Repeat tutorial</string>
    <string name="btn_backupRestore">Backup / Restore</string>
    <string name="bck_mn_advanced">Show advanced options</string>
    <string name="btn_backup">Backup</string>
    <string name="btn_replace">Replace</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_delete">Delete</string>
    <string name="bkp_description">"Choose which elements to backup/restore.
When restoring, if the backup was created without it, existing ones will be kept."</string>
    <string name="bkp_data">Data: Standard application data. Things like enabled modules, json configurations, etc. Will not include secrets nor cache.</string>
    <string name="bkp_data_prefs">Preferences: Data saved as preferences.</string>
    <string name="bkp_data_files">Files: Data saved as files.</string>
    <string name="bkp_secrets">"Secrets: Data considered 'secret', like the VirusTotal api key or the log."</string>
    <string name="bjp_cache">Cache: Data that can be easily downloaded/generated, like the hosts database. Enabling this option may increase the backup size notably.</string>
    <string name="bck_restoreDelete">Delete elements before restoring. Note that preferences and some files with default values may not exist, so disabling this option will merge the existing elements with the backup ones in unexpected ways. Disable if you know what you are doing.</string>
    <string name="bck_ignoreNewer">Allow backups created from newer app versions.</string>
    <string name="bck_newer">Canceled. The backup was created with a newer app version.</string>
    <string name="bck_chooseFile">Choose backup file</string>
    <string name="bck_backupOk">Backup created</string>
    <string name="bck_backupError">"Unable to create backup, try to choose a different location for the file."</string>
    <string name="bck_restoreTitle">Restore backup</string>
    <string name="bck_restoreMessage">"WARNING! This will replace the selected elements from the backup.
Do you really want to continue?"</string>
    <string name="bck_restoreConfirm">Replace elements</string>
    <string name="bck_restoreOk">Backup restored</string>
    <string name="bck_restoreError">Unable to restore the backup. Is it a valid file?</string>
    <string name="bck_deleteTitle">Delete elements</string>
    <string name="bck_deleteMessage">"WARNING! This will delete all the selected elements.
Do you really want to continue?"</string>
    <string name="bck_deleteConfirm">Delete elements</string>
    <string name="bck_deleteOk">Elements deleted</string>
    <string name="bck_deleteError">Unable to delete elements</string>
    <string name="tutorial">Tutorial</string>
    <string name="txt_tutorial1">"Thanks for downloading the app!

This is the tutorial, if you want to skip it you can do so with the button below. You can always come back to this tutorial from the settings menu."</string>
    <string name="txt_tutorial2">The app acts as an intermediary when opening or sharing url links. Once an url is sent to the app you can interact with it via the modules. After that you can open the link (in the app you want), share it or copy it to the clipboard.</string>
    <string name="txt_tutorial3">Set the app as the default web browser to intercept URLs when opening them.
\n(Not needed if URLs are redirected using the “Share” functionality.)</string>
    <string name="txt_tutorial4">Modules is how the app interacts with the URLs.
\nEach of the modules has a specific function. Usually to present info about the URL, or allowing it to be modified.
\nRead about them and set them up as needed.
\n
\nImportant: All the actions are manual by default. The app won\'t modify anything nor connect to the Internet unless you specifically allow it, but some actions can be auto-applied if desired.
\n
\nOpen the list of modules from the main screen, or by tapping the button below.</string>
    <string name="none">None</string>
    <string name="json_edit">Json editor</string>
    <string name="auto_desc">With automations you can perform module actions based on triggers. You can configure the automations here, or disable all them together using the toggle below.</string>
    <string name="auto_enabled">Enable automations feature</string>
    <string name="auto_error_toast">Show toast if automation fails</string>
    <string name="mPttrn_desc">"This module checks the url with regex patterns that warns, suggests or applies replacements. You can modify or create your own patterns, or even use user-created ones.
Built-in patterns include:
- Warning when contains non-ascii characters like greek letters. This can be used for phishing: googĺe.com vs google.com
- Suggest replacing 'http' with 'https'
- Suggest replacing Youtube, Reddit or Twitter with privacy-friendly alternatives [disabled by default]"</string>
    <string name="mPttrn_regexfix">Fix optional regex groups (disable if regex is not working correctly)</string>
    <string name="mPttrn_userContent">List of other useful user-created patterns: %s</string>
    <string name="mOpen_desc">"Contains the following buttons (left to right):
- Custom Tabs button: toggle to enable/disable the custom tab feature. When enabled, the browser should be opened in a 'lite' mode.
- Incognito button: For Firefox only. Toggle to enable/disable the incognito mode. When enabled, the browser should be opened in incognito.
- Open button: Press the app name to open the link on that app. If a link can be opened with multiple apps, an arrow will be shown to let you choose.
- Copy button: Press the button to copy the link into the clipboard.
- Share button: Press the button to share the link."</string>
    <string name="mOpen_ctabs">Custom tabs:</string>
    <string name="mOpen_incognito">Incognito mode:</string>
    <string name="mOpen_closeOpen">Close dialog after opening</string>
    <string name="mOpen_closeShare">Close dialog after sharing</string>
    <string name="mOpen_closeCopy">Close dialog after copying</string>
    <string name="mOpen_perDomain">Sort different domains independently</string>
    <string name="mOpen_noReferrer">Hide the source app (referrer)</string>
    <string name="mOpen_mergeCopy">Merge Copy and Share buttons (long press to copy)</string>
    <string name="mStatus_desc">By pressing the check button, a network request will be made to retrieve and display the site status code. If the result is a redirection, you will be able to view the destination URL. The URL content is obtained (GET), but not evaluated, so redirections based on JavaScript won\'t be detected.</string>
    <string name="mStatus_autoRedirect">Automatically replace redirection URLs</string>
    <string name="mVT_desc">When this module is enabled you can scan the URL using VirusTotal and check the report. A personal VirusTotal API key is needed for it to work, you can get one after registering for a free account here: https://www.virustotal.com/gui/join-us .</string>
    <string name="mVT_apiKey">API key</string>
    <string name="mVT_tm">VirusTotal™ is a trademark of Google, Inc.</string>
    <string name="mClear_desc">This module removes tracking, referrer and other useless parameters from the URL. It also allows for common offline URL redirections.</string>
    <string name="mClear_toggleReferral">"Enable referral marketing (referral parameters won't be cleared)"</string>
    <string name="mClear_toggleVerbose">Enable verbose info for the matching process</string>
    <string name="mClear_sourceDesc">URL of the JSON file catalog with the rules:</string>
    <string name="mClear_urlHint">Catalog URL</string>
    <string name="mClear_hashDesc">URL of the catalog hash file. If omitted, the download will not be checked to see if it was tampered/modified (not recommended)</string>
    <string name="mClear_hashHint">No hash check</string>
    <string name="mClear_autoUpdate">Update periodically</string>
    <string name="mLog_desc">This module logs all checked URLs. You can view, clear or edit the full log here, no visual indication will appear on the main dialog. To disable logging, just disable the module.</string>
    <string name="mLog_view">View log</string>
    <string name="mLog_edit">Edit log</string>
    <string name="mHosts_desc">"This module labels hosts, configured either by specifying them manually or by using a remote hosts-like file. You can use it to warn about dangerous or special sites. The builtin configuration specifies StevenBlack's hosts (adware/malware, fakenews, gambling and adult content) from https://github.com/StevenBlack/hosts. Note: subdomains will also be checked, so 'x.y.z' and 'y.z' will be detected for the entry 'y.z'"</string>
    <string name="mHosts_build">Build</string>
    <string name="mWebhook_desc">This module sends URLs to a configured webhook endpoint. Each URL is sent with a timestamp, allowing you to collect and process URLs on your own server.\nThanks to anoop-b for the idea and base implementation!\n\nConfigure your webhook URL and body below to start sending URLs.\nFor the body, you can use the placeholders $URL$ and $TIMESTAMP$.</string>
    <string name="mWebhook_url_hint">Webhook URL</string>
    <string name="mWebhook_auto">Automatically send URLs</string>
</resources>