<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mPttrn_desc" />

    <Button
        android:id="@+id/edit"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json_edit" />

    <Switch
        android:id="@+id/regex_fix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mPttrn_regexfix" />

    <TextView
        android:id="@+id/user_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mPttrn_userContent"
        android:autoLink="web" />
</LinearLayout>