<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/mClear_desc" />

    <CheckBox
        android:id="@+id/referral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mClear_toggleReferral" />

    <CheckBox
        android:id="@+id/verbose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mClear_toggleVerbose" />
</LinearLayout>