<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/mWebhook_desc" />

    <EditText
        android:id="@+id/webhook_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mWebhook_url_hint"
        android:inputType="textUri" />

    <Switch
        android:id="@+id/auto_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mWebhook_auto" />

</LinearLayout> 